# bio-web-api

./: LICENSE  README  Setup.hs  Toy.hs  bio-web-api.cabal
Bio/Web/: DBFetch.hs  MicroTV4.hs  RNA22.hs
Bio/Web/DBFetch/: Types.hs
Bio/Web/GProfiler/: GConvert.hs  Types.hs
Bio/Web/Internal/: Patiently.hs
Bio/Web/MicroTV4/: Parser.hs  Types.hs
